--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,55 @@
-alembic==1.11.1
-bcrypt==4.0.1
+aiohttp==3.8.4
+aiosignal==1.3.1
+ansi2html==1.8.0
+async-timeout==4.0.2
+attrs==23.1.0
 blinker==1.6.2
-click==8.1.6
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.5
 colorama==0.4.6
-dnspython==2.4.1
-email-validator==2.0.0.post2
-Flask==2.3.2
-Flask-Bcrypt==1.0.1
-Flask-Login==0.6.2
-Flask-Migrate==4.0.4
+contourpy==1.0.7
+cycler==0.11.0
+dash==2.11.1
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+Flask==2.2.5
+Flask-Cors==4.0.0
 Flask-SQLAlchemy==3.0.5
-Flask-WTF==1.1.1
+fonttools==4.39.4
+frozenlist==1.3.3
 greenlet==2.0.2
+gunicorn==21.2.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
-Mako==1.2.4
+joblib==1.2.0
+kiwisolver==1.4.4
 MarkupSafe==2.1.3
-Pillow==10.0.0
-SQLAlchemy==2.0.19
-svgwrite==1.4.3
-Tree==0.2.4
+matplotlib==3.7.1
+multidict==6.0.4
+nest-asyncio==1.5.6
+numpy==1.24.3
+openai==0.27.8
+packaging==23.1
+pandas==2.0.2
+Pillow==9.5.0
+plotly==5.15.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2023.3
+requests==2.31.0
+retrying==1.3.4
+scikit-learn==1.2.2
+scipy==1.10.1
+six==1.16.0
+SQLAlchemy==2.0.18
+tenacity==8.2.2
+threadpoolctl==3.1.0
+tqdm==4.65.0
 typing_extensions==4.7.1
-Werkzeug==2.3.6
-WTForms==3.0.1
+tzdata==2023.3
+urllib3==2.0.3
+Werkzeug==2.2.3
+yarl==1.9.2
