--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ blinker==1.6.2
 click==8.1.6
 colorama==0.4.6
 email-validator==2.0.0.post2
-Flask==2.3.2
+Flask
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.2
 Flask-Migrate==4.0.4
