--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ bcrypt==4.0.1
 blinker==1.6.2
 click==8.1.6
 colorama==0.4.6
+dnspython
 email-validator==2.0.0.post2
 Flask
 Flask-Bcrypt==1.0.1
@@ -16,7 +17,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.3
-Pillow==10.0.0
+Pillow
 SQLAlchemy==2.0.19
 svgwrite==1.4.3
 Tree==0.2.4
